<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo_background"
    tools:context=".fragment.IzinlerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="15dp"
            android:letterSpacing="0.1"
            android:text="@string/text_izinler_baslik"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:letterSpacing="0.05"
            android:text="@string/text_izinler_aciklama"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:elevation="5dp"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageViewIzinlerKonum"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="15dp"
                    app:srcCompat="@drawable/location_black_icon"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/linearLayoutIzinlerKonum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/imageViewIzinlerKonum"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:letterSpacing="0.05"
                            android:text="@string/text_izinler_konum"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:letterSpacing="0.05"
                            android:text="@string/text_izinler_konumbilgi"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:letterSpacing="0.05"
                            android:text="@string/text_izinler_uyari"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardViewIzinlerKonum"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/linearLayoutIzinlerKonum"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:letterSpacing="0.05"
                        android:text="@string/text_izinler_izinver"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </com.google.android.material.card.MaterialCardView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:elevation="5dp"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageViewIzinlerKamera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="15dp"
                    app:srcCompat="@drawable/camera_black_icon"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/linearLayoutIzinlerKamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/imageViewIzinlerKamera"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:letterSpacing="0.05"
                            android:text="@string/text_izinler_kamera"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:letterSpacing="0.05"
                            android:text="@string/text_izinler_kamerabilgi"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:letterSpacing="0.05"
                            android:text="@string/text_izinler_uyari"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardViewIzinlerKamera"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/linearLayoutIzinlerKamera"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:letterSpacing="0.05"
                        android:text="@string/text_izinler_izinver"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </com.google.android.material.card.MaterialCardView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>